@@ -1,10 +1,8 @@
 <h3>カテゴリ: <%= @category.name %>(<%= @category.articles.size.to_s %>) のリスト
 [<%= link_to "記事", {:action => "show_category_noteslist", :id => @category.id} %>]
+<%= link_to image_tag("feed-icon-14x14.png", :size =>"14x14", :border => 0, :style => "margin: 0px;", :alt => "#{@category.name}の登録"), {:controller => 'rdf', :action => 'rdf_category', :id => @category.id} %>
 </h3>
 <%=h @category.description %>
-<div id='roots_ul'>
-<%= display_categories_roots_ul_description(@category.direct_children, 1) %>
-</div>
 
 <% begin %>
 <%= will_paginate @articles %>
